@@ -1,15 +1,12 @@
-package guru.springframework.controllers;
+package com.spring.recipes.controllers;
 
-import guru.springframework.commands.RecipeCommand;
-import guru.springframework.services.RecipeService;
+import com.spring.recipes.commands.RecipeCommand;
+import com.spring.recipes.services.RecipeService;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 
-/**
- * Created by jt on 6/19/17.
- */
 @Slf4j
 @Controller
 public class RecipeController {
@@ -24,13 +21,15 @@ public class RecipeController {
     @RequestMapping("/recipe/{id}/show")
     public String showById(@PathVariable String id, Model model){
 
-        model.addAttribute("recipe", recipeService.findById(Long.valueOf(id)));
+        model.addAttribute("recipe", recipeService.findById(new Long(id)));
+
         return "recipe/show";
     }
 
     @GetMapping
     @RequestMapping("recipe/new")
     public String newRecipe(Model model){
+
         model.addAttribute("recipe", new RecipeCommand());
 
         return "recipe/recipeform";
@@ -40,14 +39,17 @@ public class RecipeController {
     @RequestMapping("recipe/{id}/update")
     public String updateRecipe(@PathVariable String id, Model model){
         model.addAttribute("recipe", recipeService.findCommandById(Long.valueOf(id)));
-        return  "recipe/recipeform";
+        return "recipe/recipeform";
     }
 
-    @PostMapping("recipe")
+    @PostMapping
+    @RequestMapping("recipe")
     public String saveOrUpdate(@ModelAttribute RecipeCommand command){
+
         RecipeCommand savedCommand = recipeService.saveRecipeCommand(command);
 
-        return "redirect:/recipe/" + savedCommand.getId() + "/show";
+        return "redirect:/recipe/" + savedCommand.getId() + "/show/";
+
     }
 
     @GetMapping
@@ -55,7 +57,6 @@ public class RecipeController {
     public String deleteById(@PathVariable String id){
 
         log.debug("Deleting id: " + id);
-
         recipeService.deleteById(Long.valueOf(id));
         return "redirect:/";
     }
